css for contact page, minor css and html changes. This phase of site is complete. Next steps will be to add js functionality for nav and photo gallery.

--- a/tw.css
+++ b/tw.css
@@ -257,6 +257,11 @@ ul {
 	margin-right: auto;
 }
 
+/*CONTACT PAGE*/
+#contact {
+	text-align: center;
+}
+
 footer {
 	background-color: #EDFAFD;
 	font-size: 15px;
