--- a/tw.css
+++ b/tw.css
@@ -15,7 +15,7 @@ p {
 	text-align: center;
 } */
 
-#nav-header {
+/* #nav-header {
 	background-color: #EDFAFD;
 	width: 100%;
 	height: 150px;
@@ -23,7 +23,7 @@ p {
 	top: 0;
 	left: 0;
 	z-index: 100;
-}
+} */
 
 /* #menu-icon {
 	display: inline-block;
@@ -357,9 +357,9 @@ footer {
 		font-size: 65px;
 		width: 90%;
 	}
-	#nav-header {
+	/* #nav-header {
 		height: 100px;
-	}
+	} */
 	#welcome-section h2 {
 		left: 0vw;
 		font-size: 55px;
@@ -367,14 +367,14 @@ footer {
 	/* #menu-icon {
 		display: none;
 	} */
-	#nav-header {
+	/* #nav-header {
 		display: flex;
 		flex-direction: row;
 		flex-wrap: nowrap;
 		justify-content: left;
 		padding: 10px;
 		width: 100vw;
-	}
+	} */
 /*	#nav-container {
 		padding: 40px;
 	}*/
