--- a/tw.css
+++ b/tw.css
@@ -11,6 +11,32 @@ p {
 	font-weight: 300;
 }
 
+.navbar {
+	background-color: #EDFAFD;
+	border: 1px solid rgba(0,0,0,0.2);
+  	padding-bottom: 10px;
+}
+
+#logo {
+	display: inline-block;
+	
+}
+
+#main-nav {
+	list-style-type: none;
+	display: flex;
+	flex-direction: column;
+}
+
+#main-nav li{
+	text-align: center;
+	margin: 10px auto;
+}
+
+.nav-links {
+	text-decoration: none;
+}
+
 /* #nav-container {
 	text-align: center;
 } */
