add hamburger menu icon and style

--- a/tw.css
+++ b/tw.css
@@ -19,7 +19,7 @@ p {
 
 #logo {
 	display: inline-block;
-	
+
 }
 
 #main-nav {
@@ -35,6 +35,13 @@ p {
 
 .nav-links {
 	text-decoration: none;
+}
+
+#navbar-toggle {
+	position: absolute;
+	top: 10px;
+	right: 20px;
+	cursor: pointer;
 }
 
 /* #nav-container {
