--- a/tw.css
+++ b/tw.css
@@ -234,12 +234,29 @@ ul {
 	margin: 0 auto;
 }
 
+.blog-container h3 {
+	margin: 15px;
+}
+
 .blog-index-titles {
 	text-align: left;
 	line-height: 1.5em;
 }
 
 .blog-link {
+	font-size: .75em;
+}
+
+.blog-post-container img {
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+	max-width: 100vw;
+	max-height: auto;
+	padding: 15px;
+}
+
+.blog-date {
 	font-size: .75em;
 }
 
@@ -296,7 +313,7 @@ footer {
 
 /* insert break for blog index page -- side by side */
 @media screen and (min-width: 768px) {
-	p, h5, h4, .included-list, #legal{
+	p, h5, h4, .blog-post-container h3, .included-list, #legal{
 		margin: auto;
 		width: 80%;
 	}
