--- a/tw.css
+++ b/tw.css
@@ -349,11 +349,22 @@ footer {
 		width: 50%;
 		height: 375px;
 	}
-	.blog-post-container img {
+	.blog-post-container {
+		width: 80%;
+		margin: auto;
+	}
+	.blog-post-container .inline-image-right {
 		margin-right: 10%;
+	}
+	.blog-post-container .inline-image-left {
+		margin-left: 10%;
+		padding-left: 0;
 	}
 	.inline-image-right {
 		float: right;
+	}
+	.inline-image-left {
+		float: left;
 	}
 	#about-photo {
 		float: left;
