narrow alignment of each listing on blog index page

--- a/tw.css
+++ b/tw.css
@@ -349,6 +349,9 @@ footer {
 		width: 50%;
 		height: 375px;
 	}
+	.blog-cell p, h4 {
+		margin-left: 15px;
+	}
 	.blog-post-container {
 		width: 80%;
 		margin: auto;
