--- a/tw.css
+++ b/tw.css
@@ -349,7 +349,7 @@ footer {
 		width: 50%;
 		height: 375px;
 	}
-	.blog-cell p, h4 {
+	.blog-cell p, .blog-cell h4 {
 		margin-left: 15px;
 	}
 	.blog-post-container {
